Updated for ACE package version 3.002.

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -822,13 +822,17 @@ him.
 
 A reasonably comprehensive history of  the  evolution  of  pre-release
 versions of the  {\ACE}  Share  Package,  is  contained  in  the  file
-`CHANGES' in the `gap' directory. However, the only  change  affecting
-users who only have knowledge of the release  version  of  the  {\ACE}
-Share Package has to do with the change of the  default  standard  for
-the numbering of cosets in a coset table from {\GAP} 4.2 to {\GAP} 4.3
+`CHANGES' in the `gap' directory. One important change for  users  who
+only have knowledge of  the  release  versions  of  the  {\ACE}  Share
+Package has to do with the change of  the  default  standard  for  the
+numbering of cosets in a coset table from {\GAP}  4.2  to  {\GAP}  4.3
 (see Section~"Coset Table Standardisation Schemes"). The {\ACE}  Share
 Package is compatible with {\GAP} 4.2, but has been built for use with
-{\GAP} 4.3.
+{\GAP} 4.3. Since the first release  version  (3.001)  of  the  {\ACE}
+Share     Package,     the     variable      `ACEIgnoreUnknownDefault'
+(see~"ACEIgnoreUnknownDefault") has been added; and because `continue'
+is now (as  of  {\GAP}  4.3)  a  {\GAP}  keyword,  the  {\ACE}  option
+`continue' has been changed to `continu' (see~"option continu").
 
 \>ACEPackageVersion() F
 
