--- a/doc/interact.tex
+++ b/doc/interact.tex
@@ -155,8 +155,8 @@ Be warned, though, that unless one of the general  {\ACE}  modes  (see
 Section~"General ACE modes"):`ACEStart'  (without  a  zero  argument),
 `ACERedo' (see~"ACERedo") or `ACEContinue' (see~"ACEContinue"), or one
 of the mode options: `start' (see~"option start"), `redo' (see~"option
-redo") or `continue' (see~"option continue"), has been  invoked  since
-the last change of any parameter options (see  Section~"ACE  Parameter
+redo") or `continu' (see~"option continu"), has been invoked since the
+last change of  any  parameter  options  (see  Section~"ACE  Parameter
 Options"), some of the values reported by `ACEParameters' may well  be
 *incorrect*.
 
