--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -27,7 +27,7 @@
   \centerline{\titlefont ACE}\medskip
   \centerline{\titlefont ---}\medskip
   \centerline{\titlefont A GAP4 Share Package}\bigskip\bigskip
-  \centerline{\secfont Version 3.001}\medskip
+  \centerline{\secfont Version \input ../VERSION}\medskip
   \centerline{\secfont Based on ACE Standalone Version 3.001}
   \vfill
   \centerline{\secfont by}\vfill
@@ -48,7 +48,7 @@
   \centerline{The University of Queensland, St.~Lucia 4072, Australia}\medskip
   \centerline{\secfont email: gregg@csee.uq.edu.au}
   \vfill
-  \centerline{\secfont April 2001}
+  \centerline{\secfont{\Month} \Year}
 }
 %
 %
