--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -518,11 +518,11 @@ any user options; it is inserted  in  order  to  check  that  no  user
 options  (possibly  made  before  the   `ACECosetTable'   call)   have
 invalidated {\ACE}'s coset table. Since the line also says `continue =
 yes', the mode `continue' (the least expensive  of  the  three  modes;
-see~"option continue") is directed at {\ACE} which evokes  a  *results
+see~"option continu") is directed at {\ACE} which  evokes  a  *results
 message*. Then `ACECosetTable' extracts the  incomplete  table  via  a
 `print' (see "option print") directive. If you wish  to  see  all  the
 options that are directed to {\ACE}, set  the  `InfoACE'  level  to  4
-(then all such commands are `Info'-ed behind a  ```ToACE> '''  prompt;
+(then all such commands are `Info'-ed behind a ```ToACE>  '''  prompt;
 see~"SetInfoACELevel").
 
 Following the standalone manual, we  now  set  things  up  to  do  the
