--- a/doc/install.tex
+++ b/doc/install.tex
@@ -101,14 +101,13 @@ To use the {\ACE} Share Package you have  to  request  it  explicitly.
 This is done by calling
 
 \beginexample
-gap> RequirePackage( "ace" );
 #I    The ACE (Advanced Coset Enumerator) share package
 #I    C code by George Havas <havas@csee.uq.edu.au> and
 #I              Colin Ramsay <cram@csee.uq.edu.au>
 #I                   ACE binary version: 3.001
 #I    GAP code by Greg Gamble <gregg@csee.uq.edu.au> and
 #I           Alexander Hulpke <ahulpke@math.ohio-state.edu>
-#I                   ACE package version: 3.001
+#I                   ACE package version: 3.002
 #I  
 #I                   For help, type: ?ACE
 true
@@ -130,7 +129,11 @@ gap> SetInfoLevel(InfoWarning, 0); RequirePackage( "ace" );;
 gap> SetInfoLevel(InfoWarning, 1);
 \endexample
 
-If you want to load the {\ACE} package by default, you  can  put   the
+\index{banner!suppression}
+The banner is also suppressed if the global {\GAP} variable `QUIET' is
+`true' or `BANNER' is `false' (these conditions  occur  if  {\GAP}  is
+invoked with the `-q' or `-b' command line switches, respectively). If
+you want to load the {\ACE}  package  by  default,  you  can  put  the
 `RequirePackage' command into your `.gaprc' file (see Section~"ref:The
 .gaprc file" in the {\GAP} Reference Manual).
 
