--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -325,7 +325,7 @@
                    and Edmund F. Robertson},
   TITLE         = {The simple group {$L_3(5)$} is efficient},
   JOURNAL       = {Communications in Algebra},
-  YEAR          = {to appear},
+  YEAR          = {to appear c. 2001},
 }
 
 @ARTICLE{CMY79,
