--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -38,8 +38,8 @@
   \bigskip
   \centerline{{\GAP} interface code by}\medskip
   \centerline{\secfont Alexander Hulpke}\medskip
-  \centerline{Department of Mathematics, Ohio State University}\medskip
-  \centerline{231 West 18th Avenue, Columbus, Ohio, 43202 USA}\medskip
+  \centerline{Department of Mathematics, Colorado State University}\medskip
+  \centerline{Weber Building, Fort Collins, CO 80523, USA}\medskip
   \centerline{and}\medskip
   \centerline{\secfont Greg Gamble}\medskip
   \centerline{Centre for Discrete Mathematics and Computing} \medskip
