--- a/doc/messages.tex
+++ b/doc/messages.tex
@@ -43,7 +43,7 @@ other  {\ACE}  interface  functions.  The  first-observed  (`Info'-ed)
 output from {\ACE}, is {\ACE}'s banner, e.g.
 
 \beginexample
-#I  ACE 3.001        Sun Apr  1 16:00:04 2001
+#I  ACE 3.001        Tue Aug 21 12:07:48 2001
 #I  =========================================
 #I  Host information:
 #I    name = hamal
@@ -100,7 +100,7 @@ like:
 
 \beginexample
 =========================================
-ACE 3.000        Thu Mar  1 17:42:50 2001
+ACE 3.001        Tue Aug 21 12:07:48 2001
 \endexample
 
 Both *progress messages* and  the  *results  message*  consist  of  an
@@ -134,7 +134,7 @@ You should see all the above (and a little  more),  except  that  your
 dates and host information will no doubt differ, by running:
 
 \beginexample
-ACEExample("A5-C5" : echo:=0, messages:=1);
+gap> ACEExample("A5-C5" : echo:=0, messages:=1);
 \endexample
 
 In the following table we  list  the  statistics  that  can  follow  a
